--- a/cafe.html
+++ b/cafe.html
@@ -199,6 +199,7 @@
                 $("#thr").removeClass("on");
                 $("#four").removeClass("on");
                 $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
                 $("#01").show();
                 $("#02").hide();
                 $("#03").hide();
@@ -211,6 +212,7 @@
                 $("#thr").removeClass("on");
                 $("#four").removeClass("on");
                 $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
                 $("#02").show();
                 $("#01").hide();
                 $("#03").hide();
@@ -223,6 +225,7 @@
                 $("#two").removeClass("on");
                 $("#four").removeClass("on");
                 $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
                 $("#03").show();
                 $("#01").hide();
                 $("#02").hide();
@@ -235,6 +238,7 @@
                 $("#two").removeClass("on");
                 $("#thr").removeClass("on");
                 $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
                 $("#04").show();
                 $("#01").hide();
                 $("#02").hide();
@@ -247,6 +251,7 @@
                 $("#two").removeClass("on");
                 $("#thr").removeClass("on");
                 $("#four").removeClass("on");
+                $(".info_img").removeClass("show");
                 $("#05").show();
                 $("#01").hide();
                 $("#02").hide();
