--- a/jeju.html
+++ b/jeju.html
@@ -29,16 +29,16 @@
                     <div class="month">
                         <span>2022<br><strong>01월</strong></span>
                     </div>
-                    <div class="day">
+                    <div class="day" id="30day">
                         <span><strong>30일</strong><br>일</span>
                     </div>
-                    <div class="day">
+                    <div class="day" id="31day">
                         <span><strong>31일</strong><br>월</span>
                     </div>
                     <div class="month">
                         <span>2022<br><strong>02월</strong></span>
                     </div>
-                    <div class="day">
+                    <div class="day" id="01day">
                         <span><strong>01일</strong><br>화</span>
                     </div>
                 </div>
@@ -67,6 +67,149 @@
                     </div>
                 </div>
             </div>
+            <div class="outer_wrap02">
+                <div class="cafe_nav">
+                    <div class="cafe_nav_scroll">
+                        <ul>
+                            <li class="on" id="one">일반특전(4)</li>
+                            <li id="two">선착특전(2)</li>
+                            <li id="thr">세트특전(1)</li>
+                            <li id="four">당일특전(2)</li>
+                            <li id="fiv">후기특전(1)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="cafe_info02" id="01" style="display: block;">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>컵홀더</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/cup.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>팜플렛</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/paper.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>I형 티켓</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/ticket.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>2월 미니달력</p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info02" id="02">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>오리지널 티켓 <span class="smalltxt">(21명)</span></p>
+                                <p class="infoday">01월 30일, 01월 31일</p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/original.jpg">
+                        </div>
+                    </div>
+                    <div class="info" style="margin-top: 10px;">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>아크릴 키링 <span class="smalltxt">(21명)</span></p>
+                                <p class="infoday">01월 30일, 01월 31일</p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info02" id="03">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>포토 티켓 <span class="smalltxt">(세트메뉴 구매자)</span></p>
+                                <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/photo.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info02" id="04">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>명언북 <span class="smalltxt">(12명)</span></p>
+                                <p class="infoday"><span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/book.jpg">
+                        </div>
+                    </div>
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>책갈피 <span class="smalltxt">(12명)</span></p>
+                                <p class="infoday"><span>02월 01일</span></p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="cafe_info02" id="05">
+                    <div class="info">
+                        <div class="info_list toggleBtn">
+                            <div class="subtit">
+                                <p>유리컵 <span class="smalltxt">(트위터 2명, 방석위카페 2명)</span></p></p>
+                                <p class="infoday">후기 이벤트</p>
+                            </div>
+                            <i class="zmdi zmdi-chevron-down"></i>
+                        </div>
+                        <div class="info_img">
+                            <img src="images/menu.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script>
@@ -74,6 +217,147 @@
             $(".movie_time").on("click", function () {
                 $(".cafe_info").show();
             });
+            $(".tag").on("click", function () {
+                $(".outer_wrap").show();
+                $(".outer_wrap02").hide();
+            });
+            $("#30day").on("click", function () {
+                $(this).addClass("click");
+                $("#31day").removeClass("click");
+                $("#01day").removeClass("click");
+                $(".outer_wrap").hide();
+                $(".outer_wrap02").show();
+                $("#one").show();
+                $("#two").show();
+                $("#thr").show();
+                $("#four").hide();                        
+                $("#fiv").show();        
+                $("#one").addClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#01").show();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });
+            $("#31day").on("click", function () {
+                $(this).addClass("click");
+                $("#30day").removeClass("click");
+                $("#01day").removeClass("click");
+                $(".outer_wrap").hide();
+                $(".outer_wrap02").show();
+                $("#one").show();
+                $("#two").show();
+                $("#thr").show();
+                $("#four").hide();
+                $("#fiv").show();
+                $("#one").addClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#01").show();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });
+            $("#01day").on("click", function () {
+                $(this).addClass("click");
+                $("#30day").removeClass("click");
+                $("#31day").removeClass("click");
+                $(".outer_wrap").hide();
+                $(".outer_wrap02").show();
+                $("#one").show();
+                $("#two").hide();
+                $("#thr").show();
+                $("#four").show();
+                $("#fiv").show();
+                $("#one").addClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#01").show();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });       
+            $("#one").on("click", function () {
+                $(this).addClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#01").show();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });      
+            $("#two").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#02").show();
+                $("#01").hide();
+                $("#03").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });    
+            $("#thr").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#two").removeClass("on");
+                $("#four").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#03").show();
+                $("#01").hide();
+                $("#02").hide();
+                $("#04").hide();
+                $("#05").hide();
+            });  
+            $("#four").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#fiv").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#04").show();
+                $("#01").hide();
+                $("#02").hide();
+                $("#03").hide();
+                $("#05").hide();
+            }); 
+            $("#fiv").on("click", function () {
+                $(this).addClass("on");
+                $("#one").removeClass("on");
+                $("#two").removeClass("on");
+                $("#thr").removeClass("on");
+                $("#four").removeClass("on");
+                $(".info_img").removeClass("show");
+                $("#05").show();
+                $("#01").hide();
+                $("#02").hide();
+                $("#03").hide();
+                $("#04").hide();
+            });        
+            $(".toggleBtn").on("click", function () {
+                $(this).next().toggleClass("show");
+            });   
         });
     </script>
 </body>
