--- a/donation01.html
+++ b/donation01.html
@@ -45,7 +45,7 @@
             </div>
             <div class="outer_wrap">
                 <div class="donation_info">
-                    <p>
+                    <p style="text-align:left !important">
                         도영이의 27번째 생일을 기념하며,<br>
                         도영이에게 받은 따뜻함을 나누고자<br>
                         구리시청에 저소득층 여성과 청소년을 위한<br>
