--- a/donation02.html
+++ b/donation02.html
@@ -45,7 +45,7 @@
             </div>
             <div class="outer_wrap">
                 <div class="donation_info">
-                    <p>
+                    <p style="text-align:left !important">
                         도영이의 27번째 생일을 기념하며,<br>
                         도영이의 이름으로 하트-하트재단 인터내셔널<br>
                         발달장애인 문화예술 지원 사업에<br>
