--- a/jeju.html
+++ b/jeju.html
@@ -185,7 +185,7 @@
                     <div class="info">
                         <div class="info_list toggleBtn">
                             <div class="subtit">
-                                <p>책갈피 <span class="smalltxt">(12명)</span></p>
+                                <p>띠부띠부씰 세트 <span class="smalltxt">(10명)</span></p>
                                 <p class="infoday"><span>02월 01일</span></p>
                             </div>
                             <i class="zmdi zmdi-chevron-down"></i>
