--- a/cafe.html
+++ b/cafe.html
@@ -71,7 +71,7 @@
                     <div class="info" style="margin-top: 10px;">
                         <div class="info_list toggleBtn">
                             <div class="subtit">
-                                <p>팜플렛</p>
+                                <p>팜플렛 (2종 중 1종 랜덤)</p>
                                 <p class="infoday">01월 30일, 01월 31일, <span>02월 01일</span></p>
                             </div>
                             <i class="zmdi zmdi-chevron-down"></i>
