--- a/cafe.html
+++ b/cafe.html
@@ -101,7 +101,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/calendar.png">
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/keyring.png">
                         </div>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/snl.png">
                         </div>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/cup.png">
                         </div>
                     </div>
                 </div>
