--- a/jeju.html
+++ b/jeju.html
@@ -125,7 +125,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/calendar.png">
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/keyring.png">
                         </div>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/snl.png">
                         </div>
                     </div>
                 </div>
@@ -205,7 +205,7 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/menu.png">
+                            <img src="images/cup.png">
                         </div>
                     </div>
                 </div>
