--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
 <body>
     <div class="wrap">
         <div class="blackoveray"></div>
-        <div class="slideshow">            
+        <div class="slideshow" style="display: none;">            
             <div class="slideshow-image" style="background-image: url('./images/bg01.jpg')"></div>
             <div class="slideshow-image" style="background-image: url('./images/bg02.jpg')"></div>
             <div class="slideshow-image" style="background-image: url('./images/bg03.jpg')"></div>
             <div class="slideshow-image" style="background-image: url('./images/bg04.jpg')"></div>
         </div>
+        <video width="100%" height="100%" autoplay="" loop="" muted="">
+            <source src="./images/dy.mp4" type="video/mp4">
+        </video>
         <div class="count_wrap">         
             <p>2022.01.30 ~ 02.01</p>           
             <h3>COMING SOON</h3>    
