--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="slideshow-image" style="background-image: url('./images/bg03.jpg')"></div>
             <div class="slideshow-image" style="background-image: url('./images/bg04.jpg')"></div>
         </div>
-        <video width="100%" height="100%" autoplay="" loop="" muted="">
+        <video width="100%" height="100%" autoplay loop muted playsinline>
             <source src="./images/dy.mp4" type="video/mp4">
         </video>
         <div class="count_wrap">         
