--- a/cafe.html
+++ b/cafe.html
@@ -77,7 +77,8 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/paper.jpg">
+                            <img src="images/paper.jpg"><br>
+                            <img src="images/paper2.jpg">
                         </div>
                     </div>
                     <div class="info" style="margin-top: 10px;">
@@ -155,7 +156,8 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/book.jpg">
+                            <img src="images/book.jpg"><br>
+                            <img src="images/book2.jpg">
                         </div>
                     </div>
                     <div class="info">
