--- a/jeju.html
+++ b/jeju.html
@@ -101,7 +101,8 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/paper.jpg">
+                            <img src="images/paper.jpg"><br>
+                            <img src="images/paper2.jpg">
                         </div>
                     </div>
                     <div class="info" style="margin-top: 10px;">
@@ -179,7 +180,8 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/book.jpg">
+                            <img src="images/book.jpg"><br>
+                            <img src="images/book2.jpg">
                         </div>
                     </div>
                     <div class="info">
