--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/525946d639.js" crossorigin="anonymous"></script>
 </head>
+<style>
+    video {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+</style>
 <body>
     <div class="wrap">
         <div class="blackoveray"></div>
