--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="s_text">sec</span>
                 </div>
             </div>
-            <div class="link" style="display:none;">
+            <div class="link">
                 <p class="size3">
                     <a href="https://doybox.site/main.html">
                         <i class="fas fa-home"></i>
