--- a/donation02.html
+++ b/donation02.html
@@ -51,7 +51,7 @@
                         발달장애인 문화예술 지원 사업에<br>
                         1,000,000원을 후원했습니다.<br>
                         적은 보탬이지만, 그들의 아름다운 하모니가<br>
-                        세상에 울려 퍼지는데 도움이 되었으면 좋겠습니다.<br>
+                        세상에 울려 퍼지는데 도움이 되었으면 좋겠습니다.
                     </p>
                     <div class="donation_img">                        
                         <img src="./images/donation02.png">
