--- a/donation02.html
+++ b/donation02.html
@@ -53,7 +53,7 @@
                         적은 보탬이지만, 그들의 아름다운 하모니가<br>
                         세상에 울려 퍼지는데 도움이 되었으면 좋겠습니다.
                     </p>
-                    <div class="donation_img">                        
+                    <div class="donation_img" style="margin-top: 0 !important">                        
                         <img src="./images/donation02.png">
                         <br>
                     </div>
