--- a/donation01.html
+++ b/donation01.html
@@ -51,7 +51,7 @@
                         구리시청에 저소득층 여성과 청소년을 위한<br>
                         중형 생리대 201팩(3,216개)을<br>
                         생일에 맞춰 전달할 예정입니다.<br>
-                        작지만 따뜻한 마음이 잘 전달되길 바라며,<br>
+                        따뜻한 마음이 잘 전달되길 바라며,<br>
                         힘든 상황 속에 위로가 되었기를 소망합니다.<br><br>
                         기부증서 추후 업로드 예정
                     </p>
