--- a/cafe.html
+++ b/cafe.html
@@ -128,7 +128,8 @@
                             <i class="zmdi zmdi-chevron-down"></i>
                         </div>
                         <div class="info_img">
-                            <img src="images/keyring.png">
+                            <img src="images/keyring.png"><br>                            
+                            <img src="images/keyring.jpg">
                         </div>
                     </div>
                 </div>
