--- a/seoul.html
+++ b/seoul.html
@@ -63,7 +63,7 @@
                     <a href="https://twitter.com/cafewemeethere" target="_blank"><p><i class="zmdi zmdi-twitter"></i> Twitter</p></a>
                     <p>MENU</p>
                     <div class="menu_img">
-                        <img src="./images/menu.png">
+                        <img src="./images/seoul.jpg">
                     </div>
                 </div>
             </div>
