--- a/donation01.html
+++ b/donation01.html
@@ -55,8 +55,9 @@
                         힘든 상황 속에 위로가 되었기를 소망합니다.<br><br>
                         기부증서 추후 업로드 예정
                     </p>
-                    <div class="donation_img">
-                        <img src="">
+                    <div class="donation_img">                        
+                        <img src="./images/guri.jpg">
+                        <br>
                     </div>
                 </div>
             </div>
