--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>DOYOUNG THEATER, DOYBOX</title>
     <!-- Jquery -->
     <script type="text/javascript" src="./js/jquery-1.12.4.js"></script>
-    <script type="text/javascript" src="./js/common.js"></script>
+    <!-- <script type="text/javascript" src="./js/common.js"></script> -->
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="./css/reset.css">
