--- a/donation01.html
+++ b/donation01.html
@@ -55,8 +55,9 @@
                     </p>
                     <div class="donation_img">                        
                         <img src="./images/guri.jpg">
-                        <br>
                     </div>
+                    <p>좋은 뜻에 함께 해주신 유기농본샵 운용사<br>
+                        DSGO 임순주 대표님 감사합니다.</p>
                 </div>
             </div>
         </div>
